; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_usrreq.c_tcp_getconninfo.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_usrreq.c_tcp_getconninfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.conninfo_tcp = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcp_getconninfo(%struct.socket* %0, %struct.conninfo_tcp* %1) #0 {
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.conninfo_tcp*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  store %struct.conninfo_tcp* %1, %struct.conninfo_tcp** %4, align 8
  %5 = load %struct.socket*, %struct.socket** %3, align 8
  %6 = load %struct.conninfo_tcp*, %struct.conninfo_tcp** %4, align 8
  %7 = getelementptr inbounds %struct.conninfo_tcp, %struct.conninfo_tcp* %6, i32 0, i32 1
  %8 = call i32 @tcp_lookup_peer_pid_locked(%struct.socket* %5, i32* %7)
  %9 = load %struct.socket*, %struct.socket** %3, align 8
  %10 = call i32 @sototcpcb(%struct.socket* %9)
  %11 = load %struct.conninfo_tcp*, %struct.conninfo_tcp** %4, align 8
  %12 = getelementptr inbounds %struct.conninfo_tcp, %struct.conninfo_tcp* %11, i32 0, i32 0
  %13 = call i32 @tcp_fill_info(i32 %10, i32* %12)
  ret void
}

declare dso_local i32 @tcp_lookup_peer_pid_locked(%struct.socket*, i32*) #1

declare dso_local i32 @tcp_fill_info(i32, i32*) #1

declare dso_local i32 @sototcpcb(%struct.socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
